[MOSIP-44886] : Move code from develop to release-1.3.x branch  (#1722)
* MOSIP-44224: Removed suppress warnings from code base. (#1657)

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* MOSIP-43927: type of additional_config is changed from DTO to JsonNode (#1656)

* MOSIP-43927: type of additional_config is changed from DTO to JsonNode

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* MOSIP-43927: type of additional_config is changed from DTO to JsonNode

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Removed DTO,Adapted JsonNode in test cases

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Removed DTO,Adapted JsonNode in test cases

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Addressed coderabbit comments for test cases

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Added validation for JsonNode whether it is of object or not

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* created new error code for Json vaidation for additonal config

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Updated impl class

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Redundant code fixed

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Removed unnecessary null checks

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Removed unnecessary null checks

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Removed unnecessary null checks

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Optimized code

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Optimized code

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Optimized code

Signed-off-by: Chetan Kumar Hirematha <chetankumar.h.239@gmail.com>

* Optimized code

Signed-off-by: Chetan Kumar Hiremat